--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
-div#title{
+h1{
     text-align: center;
+    font-family: "Raleway", sans-serif;
+    font-weight: 100;
+    font-size:  80px;
+}
+div#para{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 100;
 }
