--- a/style.css
+++ b/style.css
@@ -1,44 +1,48 @@
-body{
+body {
     background-color: #e2e2e2;
 }
 
-h1{
+#pagetitle {
     text-align: center;
     font-family: "Raleway", sans-serif;
     font-weight: 100;
-    font-size:  80px;
+    font-size: 80px;
     margin: 0;
 }
-div#para{
+
+div#para {
     font-family: 'Raleway', sans-serif;
     font-weight: 100;
 }
+
 .topnav {
     background-color: #808080;
     overflow: hidden;
-  }
-  /* Style the links inside the navigation bar */
-  .topnav a {
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
     float: left;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
-  }
-  
-  /* Change the color of links on hover */
-  .topnav a:hover {
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
     background-color: #2296b967;
     color: rgb(236, 134, 0);
-  }
-  
-  /* Add a color to the active/current link */
-  .topnav a.active {
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
     background-color: #36cbf867;
     color: white;
-  }
-hr{
+}
+
+hr {
     border: 1px;
     margin: auto;
     margin-top: 3px;
@@ -47,15 +51,33 @@ hr{
     background-color: gray;
 }
 
-.project{
-    max-width: 30%;
+.project {
+    max-width: 45%;
     margin: auto;
-}
-.project img{
-    max-width: 100%;
-    display: block;
-}
-.project h2{
     font-family: "Raleway", sans-serif;
-    font-weight: 100;
+    border: 1px;
+    padding: 10px;
+    border-style: solid;
+    margin-bottom: 10px;
+    border-radius: 10px;
+}
+
+.project img {
+    border-radius:5px;
+    margin: auto;
+    object-fit:none;
+    width: 100%;
+    height:300px;
+    display: block;
+    
+}
+
+.project h2 {
+    font-weight: 300;
+    font-size:  200%;
+}
+
+.project p {
+    font-weight: 200;
+    font-size: 120%;
 }
