--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
+:root{
+--text: #050506;
+--background: #fcfcfd;
+--primary: #5c59af;
+--secondary: #daa1d3;
+--accent: #e55270;
+}
+
+
 body {
-    background-color: #e2e2e2;
+    background-color: #fcfcfd;
+    margin: 0;
 }
 
 #pagetitle {
@@ -16,8 +26,9 @@ div#para {
 }
 
 .topnav {
-    background-color: #808080;
+    background-color: #5c59af;
     overflow: hidden;
+    padding-top: 0;
 }
 
 /* Style the links inside the navigation bar */
@@ -32,13 +43,13 @@ div#para {
 
 /* Change the color of links on hover */
 .topnav a:hover {
-    background-color: #2296b967;
-    color: rgb(236, 134, 0);
+    background-color: #daa1d3;
+    color: #050506;
 }
 
 /* Add a color to the active/current link */
 .topnav a.active {
-    background-color: #36cbf867;
+    background-color: #e55270;
     color: white;
 }
 
@@ -57,26 +68,30 @@ hr {
     font-family: "Raleway", sans-serif;
     border: 1px;
     padding: 10px;
+    
     border-style: solid;
     margin-bottom: 10px;
     border-radius: 10px;
 }
 
 .project img {
-    border-radius:5px;
+    border-radius: 10px;
     margin: auto;
-    object-fit:none;
+    object-fit: none;
     width: 100%;
-    height:300px;
+    height: 30vh;
     display: block;
-    
+
 }
 
 .project h2 {
+    color: #e55270;
     font-weight: 300;
-    font-size:  200%;
+    font-size: 200%;
 }
-
+.project a{
+    color: #e55270;
+}
 .project p {
     font-weight: 200;
     font-size: 120%;
