--- a/style.css
+++ b/style.css
@@ -72,6 +72,17 @@ hr {
     border-style: solid;
     margin-bottom: 10px;
     border-radius: 10px;
+    transition: all 200ms ease-in-out;
+}
+
+.project:hover{
+    border: 5px;
+    border-style: solid;
+    /* REDO THIS PART SO IT HAS ROUNDED CORNERS*/
+    border-image: linear-gradient(to bottom right, #b827fc 0%, #2c90fc 25%, #b8fd33 50%, #fec837 75%, #fd1892 100%);
+    border-image-slice: 1;
+    background-origin: border-box;
+    background-clip: content-box, border-box;
 }
 
 .project img {
@@ -95,4 +106,25 @@ hr {
 .project p {
     font-weight: 200;
     font-size: 120%;
+}
+.contact{
+    font-family: "Raleway", sans-serif;
+    text-align: center;   
+    margin: 20px;
+    margin-left: 30%;
+    margin-right: 30%; 
+    border: 1px;
+    border-style: solid;
+    border-radius: 10px;
+    transition: all 400ms ease-out;
+}
+.contact h2{
+    font-weight: 100;
+    font-size: 200%;
+}
+.contact:hover {
+    border: 1px, #e55270;
+    padding: 20px;
+    background-color: #5c59af;
+    color:#fcfcfd ;
 }
