--- a/style.css
+++ b/style.css
@@ -62,11 +62,21 @@ hr {
     height: 3px;
     background-color: gray;
 }
+
 @keyframes projectHover {
-    0% {background-image: linear-gradient(360deg, #b827fc 0%, #2c90fc 25%, #b8fd33 50%, #fec837 75%, #fd1892 100%);}
-    50% {background-image: linear-gradient(180deg, #b827fc 0%, #2c90fc 25%, #b8fd33 50%, #fec837 75%, #fd1892 100%);}
-    100% {background-image: linear-gradient(0deg, #b827fc 0%, #2c90fc 25%, #b8fd33 50%, #fec837 75%, #fd1892 100%);}
-  }
+    0% {
+        background-position: 0px 0px
+    }
+
+    50% {
+        background-position: 500px 500px
+    }
+
+    100% {
+        background-position: 1000px 1000px
+    }
+}
+
 .project {
     max-width: 45%;
     margin: auto;
@@ -85,8 +95,17 @@ hr {
 .project:hover {
     border-radius: 10px;
     padding: 8px 14px;
-    background-image: linear-gradient(330deg, #b827fc 0%, #2c90fc 25%, #b8fd33 50%, #fec837 75%, #fd1892 100%);
-    animation: steps(20, jump-none) projectHover 2s infinite;
+    background-image: linear-gradient(0deg,
+            #b827fc 0%,
+            #2c90fc 12.5%,
+            #b8fd33 25%,
+            #fec837 37.5%,
+            #fd1892 50%,
+            #fec837 62.5%,
+            #b8fd33 75%,
+            #2c90fc 87.5%,
+            #b827fc 100%);
+    animation: 3s linear .1s projectHover infinite;
     background-origin: border-box;
     box-shadow: inset 0 100vw white;
     border: 5px solid transparent;
@@ -107,6 +126,11 @@ hr {
     font-weight: 300;
     font-size: 200%;
 }
+.project p a {
+    text-decoration: underline;
+    position: relative;
+
+}
 
 .project a {
     position: absolute;
@@ -119,6 +143,7 @@ hr {
     z-index: 10;
     /* Places the link above everything else in the div */
 }
+
 
 .project p {
     font-weight: 200;
@@ -147,59 +172,4 @@ hr {
     padding: 20px;
     background-color: #5c59af;
     color: #fcfcfd;
-}
-
-.bio {
-
-    margin-top: 20px;
-    margin-left: 15%;
-    margin-right: 25%;
-
-    width: 70%;
-    border: 1px;
-    border-style: solid;
-    border-radius: 10px;
-
-    #names {
-        float: right;
-        margin-right: 20%;
-    }
-
-    h2 {
-        font-weight: 100;
-        font-size: 500%;
-        margin-bottom: 0px;
-
-    }
-
-    h3 {
-        font-weight: 200;
-        font-size: 160%;
-
-    }
-
-    ul {
-        list-style-type: '-';
-    }
-
-    li {
-        padding-top: 5px;
-        padding-bottom: 5px;
-    }
-
-    #pfp {
-        margin-top: 3%;
-        margin-left: 6%;
-        border: 1px;
-        border-style: solid;
-        border-radius: 10px;
-        padding: 10px;
-        min-width: 250px;
-        min-height: 250px;
-        display: inline-block;
-    }
-
-    img {
-        border-radius: 10px;
-    }
 }
