--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ div#para {
     font-weight: 100;
 }
 
+
 .topnav {
     background-color: #5c59af;
     overflow: hidden;
@@ -63,92 +64,48 @@ hr {
     background-color: gray;
 }
 
-@keyframes projectHover {
-    0% {
-        background-position: 0px 0px
-    }
 
-    50% {
-        background-position: 500px 500px
-    }
-
-    100% {
-        background-position: 1000px 1000px
-    }
-}
-
-.project {
-    max-width: 45%;
-    margin: auto;
-    border: 2px;
-    padding: 6px 12px;
+#indexCard{
+    border: #050506 1px solid;
+    border-radius: 10px;
     position: relative;
-    border-style: solid;
-    margin-bottom: 10px;
-    border-radius: 10px;
-    background-image: white;
-    box-shadow: inset 0 100vw white;
-    transition: all 200ms ease-in-out;
-
-}
-
-.project:hover {
-    border-radius: 10px;
-    padding: 8px 14px;
-    background-image: linear-gradient(0deg,
-            #b827fc 0%,
-            #2c90fc 12.5%,
-            #b8fd33 25%,
-            #fec837 37.5%,
-            #fd1892 50%,
-            #fec837 62.5%,
-            #b8fd33 75%,
-            #2c90fc 87.5%,
-            #b827fc 100%);
-    animation: 3s linear .1s projectHover infinite;
-    background-origin: border-box;
-    box-shadow: inset 0 100vw white;
-    border: 5px solid transparent;
-}
-
-.project img {
-    border-radius: 10px;
     margin: auto;
-    object-fit: none;
-    width: 100%;
-    height: 30vh;
-    display: block;
-
+    width: 60%;
+    overflow:hidden; 
+    white-space: nowrap;
+    h2{
+        margin-top: 5px;
+        text-align: center;
+        font-weight: 200;
+        font-size: 50px;
+    }
+}
+@keyframes scroll {
+    from {
+      transform: translateX(0%);
+    }
+    to {
+      transform: translateX(-2500px);
+    }
+  }
+div.scrollContainer{
+  overflow: hidden;
+  white-space: nowrap;
+  
+  padding: 10px;
 }
 
-.project h2 {
-    color: #e55270;
-    font-weight: 300;
-    font-size: 200%;
-}
-.project p a {
-    text-decoration: underline;
-    position: relative;
-
-}
-
-.project a {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    text-decoration: none;
-    /* No underlines on the link */
-    z-index: 10;
-    /* Places the link above everything else in the div */
+div.scrollContainer img{
+    animation: scroll 5s infinite linear;
+    margin: 0 0.5em;
+    /*padding: 10px;*/
+    object-fit: cover;
+    border-radius: 30px;
+    width: 600px;
+    height: 400px;
 }
 
 
-.project p {
-    font-weight: 200;
-    font-size: 120%;
-}
 
 .contact {
 
