--- a/style.css
+++ b/style.css
@@ -65,62 +65,109 @@ hr {
 }
 
 
-#indexCard{
+#indexCard {
     border: #050506 1px solid;
     border-radius: 10px;
     position: relative;
     margin: auto;
     width: 60%;
-    overflow:hidden; 
+    overflow: hidden;
     white-space: nowrap;
-    h2{
+
+    h2 {
         margin-top: 5px;
+        margin-bottom: 0px;
         text-align: center;
         font-weight: 200;
         font-size: 50px;
     }
 }
-@keyframes scroll {
-    from {
-      transform: translateX(0%);
-    }
-    to {
-      transform: translateX(-2500px);
-    }
-  }
-div.scrollContainer{
-  overflow: hidden;
-  white-space: nowrap;
-  padding: 10px;
+
+#projCardHolder {
+    margin: 5px;
+    overflow: hidden;
 }
 
-div.scrollContainer img{
-
-    margin: 0 0.5em;
-    /*padding: 10px;*/
+.projCard {
+    margin: 10px;
+    float: left;
+    border: #050506 2px solid;
+    border-radius: 10px;
     object-fit: cover;
-    border-radius: 30px;
-    width: 600px;
-    height: 400px;
+    width: 22.5%;
+    height: 150%;
+    transition: 100ms ease-in-out;
 }
 
+
+.projCard h3 {
+    text-align: center;
+    margin: 5px;
+    font-weight: 300;
+    font-size: 30px;
+}
+
+.projCard h5 {
+    text-align: center;
+    margin: 5px;
+    font-weight: 500;
+}
+
+.projCard img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    object-fit: cover;
+    width: 200px;
+    height: 160px;
+    transition: 100ms ease-in-out;
+}
+.projCard a{
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    text-decoration: none;
+    /* No underlines on the link */
+    z-index: 10;
+    /* Places the link above everything else in the div */
+}
+.projCard:hover {
+    border: #5c59af 5px solid;
+    h3 {
+        font-weight: 400;
+    }
+    img{
+        border: #5c59af 3px solid;
+        border-radius: 10px;
+
+    }
+}
 
 
 .contact {
-
-    text-align: center;
-    margin: 20px;
-    margin-left: 30%;
-    margin-right: 30%;
-    border: 1px;
-    border-style: solid;
+    height: 100px;
+    margin: 20px 30%;
+    border: 1px solid;
     border-radius: 10px;
     transition: all 400ms ease-out;
+    position: relative;
 }
 
-.contact h2 {
+.contact a {
     font-weight: 100;
     font-size: 200%;
+    color: #050506;
+    text-decoration: none;
+    transition: all 1000ms ease-in;
+        position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .contact:hover {
@@ -128,4 +175,8 @@ div.scrollContainer img{
     padding: 20px;
     background-color: #5c59af;
     color: #fcfcfd;
+    a{
+        color: #f2f2f2;
+        text-shadow:#e55270 2px 2px, #e55270 1px 1px, #e55270 3px 3px ;
+    }
 }
